--- a/front/src/app/planetas/planetas.component.css
+++ b/front/src/app/planetas/planetas.component.css
@@ -143,3 +143,25 @@ html, body {
   background-color: #0056b3;
 }
 
+/* planetas.component.css */
+.info-planet {
+  position: fixed; /* Fija el elemento en la pantalla */
+  bottom: 20px; /* Espacio desde el fondo */
+  right: 20px; /* Espacio desde la derecha */
+  width: 300px; /* Ancho del rectángulo */
+  background-color: rgba(255, 255, 255, 0.9); /* Fondo blanco con algo de transparencia */
+  border: 1px solid #ccc; /* Borde gris claro */
+  border-radius: 8px; /* Bordes redondeados */
+  padding: 15px; /* Espaciado interno */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* Sombra suave */
+  z-index: 1000; /* Asegúrate de que esté en la parte superior */
+}
+
+.info-planet h3 {
+  margin: 0 0 10px 0; /* Margen inferior */
+}
+
+.info-planet p {
+  margin: 5px 0; /* Margen superior e inferior */
+  font-size: 14px; /* Tamaño de fuente */
+}
